--- a/Cinema/docker-compose.yml
+++ b/Cinema/docker-compose.yml
@@ -1,11 +1,9 @@
 version: "3.8"
 
 services:
-  sql-server-db:
-    container_name: sql-server-db
-    image: mcr.microsoft.com/mssql/server:2022-latest
+  mongo:
+    image: mongo
+    restart: always
+    hostname: mongodb
     ports:
-      - "11433:1433"
-    environment:
-      SA_PASSWORD: "N!KoD3M!01KrsZ"
-      ACCEPT_EULA: "Y"
+      - "27018:27017"
