A little better version of Redis

--- a/Cinema/Cinema/appsettings.Development.json
+++ b/Cinema/Cinema/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Redis.Configuration": "localhost:6379",
+    "Mongo.Configuration": "mongodb://localhost:27018"
   }
 }
