--- a/Cinema/Cinema/appsettings.json
+++ b/Cinema/Cinema/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Redis.InstanceName": "Cinema_",
+    "Mongo.DatabaseName": "Cinema"
+  }
 }
