--- a/Cinema/Cinema.Tests/Cinema.Tests.csproj
+++ b/Cinema/Cinema.Tests/Cinema.Tests.csproj
@@ -9,9 +9,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="CassandraCSharpDriver" Version="3.19.0" />
         <PackageReference Include="FluentAssertions" Version="6.8.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
-        <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
         <PackageReference Include="Moq" Version="4.18.3" />
         <PackageReference Include="NUnit" Version="3.13.3" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
