--- a/Cinema/Cinema/Properties/launchSettings.json
+++ b/Cinema/Cinema/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "Cinema": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7074;http://localhost:5074",
       "environmentVariables": {
