--- a/Cinema/Cinema.Tests/Cinema.Tests.csproj
+++ b/Cinema/Cinema.Tests/Cinema.Tests.csproj
@@ -23,4 +23,8 @@
       <ProjectReference Include="..\Cinema\Cinema.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Services" />
+    </ItemGroup>
+
 </Project>
