--- a/Cinema/Cinema/appsettings.json
+++ b/Cinema/Cinema/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Redis.InstanceName": "Cinema_",
-    "Mongo.DatabaseName": "Cinema"
+    "Cassandra": "127.0.0.1"
   }
 }
