--- a/Cinema/Cinema/appsettings.Development.json
+++ b/Cinema/Cinema/appsettings.Development.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "Redis.Configuration": "localhost:6379",
-    "Mongo.Configuration": "mongodb://localhost:27018"
-  }
+  "CassandraNodePorts": [
+    9142,
+    9242
+  ]
 }
