--- a/Cinema/Cinema.Repository/Cinema.Repository.csproj
+++ b/Cinema/Cinema.Repository/Cinema.Repository.csproj
@@ -12,6 +12,13 @@
 
     <ItemGroup>
       <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
+      <PackageReference Include="Parsevoir" Version="1.1.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Microsoft.Extensions.Configuration.Abstractions">
+        <HintPath>C:\Program Files\dotnet\shared\Microsoft.AspNetCore.App\2.1.30\Microsoft.Extensions.Configuration.Abstractions.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
