--- a/Cinema/Cinema.Repository/Cinema.Repository.csproj
+++ b/Cinema/Cinema.Repository/Cinema.Repository.csproj
@@ -19,6 +19,9 @@
       <Reference Include="Microsoft.Extensions.Configuration.Abstractions">
         <HintPath>C:\Program Files\dotnet\shared\Microsoft.AspNetCore.App\2.1.30\Microsoft.Extensions.Configuration.Abstractions.dll</HintPath>
       </Reference>
+      <Reference Include="Microsoft.Extensions.Configuration.Binder">
+        <HintPath>C:\Program Files\dotnet\shared\Microsoft.AspNetCore.App\6.0.13\Microsoft.Extensions.Configuration.Binder.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
