--- a/Cinema/Cinema/appsettings.json
+++ b/Cinema/Cinema/appsettings.json
@@ -6,6 +6,12 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "mongodb://localhost:27018",
-  "DatabaseName": "Cinema"
+  "MongoDb": {
+    "ConnectionString": "mongodb://localhost:27018",
+    "DatabaseName": "Cinema"
+  },
+  "Kafka": {
+    "BootstrapServers": "localhost:9092",
+    "MessageMaxBytes": 1048588
+  }
 }
