--- a/Cinema/Cinema.Entity/Cinema.Entity.csproj
+++ b/Cinema/Cinema.Entity/Cinema.Entity.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Confluent.Kafka" Version="2.0.2" />
       <PackageReference Include="MongoDB.Bson" Version="2.18.0" />
     </ItemGroup>
 
